# bad_word_filter_server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dot.env  postfile  test.sh
.github/workflows/: production-deploy.yml  staging-deploy.yml
k8s/: configmap.yml  deployment.yaml  secret.yml  service.yaml
src/: db.rs  main.rs  middleware.rs  nlp_processing.rs  trie.rs
