[package]
name = "bad_word_svr"
version = "0.1.0"
edition = "2021"

# Optional fields
authors = ["Derrick T. Woolworth <dwoolworth@gmail.com>"]
description = "Checks a message against a blacklist of words using trie and nlp"
license = "MIT"
repository = "https://github.com/deviousdudes/bad_word_svr"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
stopwords = "^0.1.0"
rust-stemmers = "1.2"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
